--- a/components/LandingPageComponents/LandingPage.module.css
+++ b/components/LandingPageComponents/LandingPage.module.css
@@ -44,6 +44,8 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    margin-right: 26px;
+    margin-top: 60px;
 }
 
 .logo{
@@ -53,19 +55,7 @@
 .doogos{
     color: white;
 }
-.signupcontainer{
-    color: white;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: white;
-    border-style: solid;
-    display: flex;
-    justify-content: center;
-    height: 8vh;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-}
+
 
 .signupwithemail{
     text-decoration: underline;
