--- a/components/AuthenticationBox/LoginComponent/Login.module.css
+++ b/components/AuthenticationBox/LoginComponent/Login.module.css
@@ -14,14 +14,25 @@
   justify-content: space-around;
   padding-top: 20px;
 }
+
+.rememberme{
+  color: white;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-right: 178px;
+}
 .forgotpasswordcontainer {
+ 
   display: flex;
   width: 80%;
   justify-content: flex-end;
 }
+.forgotpassword{
+  margin-top: -31px;
+}
 
 .usernamecontainer {
-  margin-right: 124px;
+  margin-right: 105px;
 }
 
 .passwordcontainer {
@@ -38,6 +49,7 @@
   display: flex;
   justify-content: center;
   height: 8vh;
+  width: 38vh;
   flex-direction: column;
   align-items: center;
   gap: 5px;
