--- a/components/common/Button/Button.module.css
+++ b/components/common/Button/Button.module.css
@@ -30,31 +30,33 @@
 .submit{
     color: white;
     background-color: #0000004a;
-    height: 28px;
-    width: 85px;
-    border-radius: 10px;
+    height: 24px;
+    width: 65px;
+    border-radius: 7px;
     border-width: 1px;
     border-color: white;
     border-style: solid;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 16px;
+    margin-bottom: 18px;
     
     
 }
 .cancel{
     color: white;
     background-color: #0000004a;
-    height: 28px;
-    width: 85px;
-    border-radius: 10px;
+    height: 24px;
+    width: 65px;
+    border-radius: 7px;
     border-width: 1px;
     border-color: white;
     border-style: solid;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 16px;
     
 }
+
 
 
