--- a/components/AuthenticationBox/LoginComponent/Login.module.css
+++ b/components/AuthenticationBox/LoginComponent/Login.module.css
@@ -19,6 +19,10 @@
   width: 80%;
   justify-content: flex-end;
 }
+.forgotpassword {
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 .usernamecontainer {
   margin-right: 124px;
@@ -38,7 +42,12 @@
   display: flex;
   justify-content: center;
   height: 8vh;
+  width: 260px;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
+}
+.signupwithemail {
+  text-decoration: underline;
+  cursor: pointer;
 }
