--- a/components/HomePageComponents/HomeComponent/HomeComponents.module.css
+++ b/components/HomePageComponents/HomeComponent/HomeComponents.module.css
@@ -1,64 +1,56 @@
-.HomePage{
-    background-image: url("../../../public/Assets/HomeBG.jpg");
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-   
+.HomePage {
+  background-image: url("../../../public/Assets/HomeBG.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.menubar {
+  height: 51px;
+  width: 318px;
+  /* background-color: rgba(0, 0, 0, 0.388); */
+  background-color: #c48f8f63;
+  border-color: white;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 1px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 5px;
+}
+.menubariconcointainer {
+  /* background-color: #c48f8f63; */
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  background: transparent;
+}
 
-  
-    
-  }
-  .menubar{
-    height: 51px;
-    width: 318px;
-    /* background-color: rgba(0, 0, 0, 0.388); */
-    background-color: #c48f8f63;
-   border-color: white;
-    border-radius: 8px;
-    border-style: solid;
-    border-width: 1px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .menubariconcointainer{
-    background-color: #c48f8f63;
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-  }
-  
-  .RecycleBin{
-    width: 36px;
-   
-  }
-  .FileManagerIcon{
-    height: 30px;
-    width: 36px;
-    
-  }
-  .MyPC{
-    height: 33px;
-    width: 35px;
-    
-  
-  }
-  .OSiconblack{
-    height: 37px;
-    width: 35px;
-    
-  }
-  .Settings{
-    height: 33px;
-    width: 35px;
-   
-  }
+.RecycleBin {
+  width: 36px;
+}
+.FileManagerIcon {
+  height: 30px;
+  width: 36px;
+}
+.MyPC {
+  height: 33px;
+  width: 35px;
+}
+.OSiconblack {
+  height: 37px;
+  width: 35px;
+}
+.Settings {
+  height: 33px;
+  width: 35px;
+}
