--- a/components/HomePageComponents/Menu/Menu.module.css
+++ b/components/HomePageComponents/Menu/Menu.module.css
@@ -1,5 +1,5 @@
 .menuContainer {
-  background-color: rgba(253, 253, 253, 0.329);
+  background-color: rgb(0 0 0 / 26%);
   position: fixed;
   backdrop-filter: blur(2.5px);
   inset: 0;
