--- a/pages/test/test.module.css
+++ b/pages/test/test.module.css
@@ -1,5 +1,5 @@
 .testContainer {
   height: 100vh;
   width: 100%;
-  background-image: url("../../public/Assets/bgimage.png");
+  /* background-image: url("../../public/Assets/bgimage.png"); */
 }
