--- a/components/common/Folder/Folder.module.css
+++ b/components/common/Folder/Folder.module.css
@@ -12,10 +12,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
 }
 .folderNameContainer {
   height: 60px;
   width: 300px;
+ 
 
   background-color: rgba(146, 146, 146, 0.738);
   display: flex;
@@ -50,9 +52,11 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  position: fixed;
+  margin-top: 60px;
 }
 .folderNavigation {
-  width: 300px;
+  width: 396px;
   /* border-style: solid;
   border-color: white;
   border-width: 1px; */
@@ -61,6 +65,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  /* position: fixed; */
 }
 .path {
   width: 950px;
@@ -112,6 +117,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin-top: 120px;
 }
 .mainBody {
   display: flex;
@@ -119,6 +125,7 @@
   gap: 10px;
   padding-top: 10px;
   padding-left: 10px;
+  margin-top: 113px
 }
 .folderIconsContainer {
   height: 80px;
@@ -128,4 +135,222 @@
   justify-content: center;
   flex-direction: column;
   gap: 5px;
+}
+
+
+
+.NewFolderNavigation{
+  border-radius: 1px;
+  border-color: white;
+  border-style: solid;
+  height: 50px;
+  margin-top: 119px;
+  width: 1520px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+  position: fixed;
+
+}
+.NewHomeNavigation{
+  position: fixed;
+}
+.newicon{
+  margin-left: 12px;
+  height: 30px;
+  width: 30px;
+}
+.Newicon{
+  color: white;
+}
+.ViewArrow{
+  margin-left: -12px;
+    width: 16px;
+    margin-top: 6px;
+}
+.Line{
+  height: 28px;
+  width: 1px;
+  background-color: white;
+}
+
+
+.Cuticon{
+  height: 22px;
+  width: 22px;
+  margin-top: 6px;
+
+}
+
+.Copyicon{
+  height: 20px;
+  width: 19px;
+  margin-top: 1px;
+
+}
+.Pasteicon{
+  height: 20px;
+  width: 19px;
+  margin-top: 1px;
+}
+.Deleteicon{
+  height: 20px;
+  width: 19px;
+  margin-top: 1px;
+}
+.Line1{
+  height: 29px;
+  width: 1px;
+  background-color: white;
+}
+
+.homeicon{
+  margin-top: 179px;
+  margin-left: 20px;
+}
+.Hometext{
+  color: white;
+  font-size: 18px;
+  margin-left: 60px;
+  margin-top: -23px;
+}
+.HomeBottomLine{
+  border-radius: 1px;
+  border-style: solid;
+  border-color: white;
+  width: 125px;
+  margin-left: 6px;
+  margin-top: 7px;
+  border-width: 1px;
+}
+.Namenavigation{
+  margin-left: 146px;
+  border-color: white;
+  border-style: solid;
+  height: 50px;
+  margin-top: -371px;
+  width: 1383px;
+  border-width: 1px
+}
+.Line2{
+  height: 358px;
+  width: 1px;
+  background-color: white;
+  margin-left: 146px;
+  margin-top: -38px;
+}
+.NameNavigationname{
+  color: white;
+  padding: 19px;
+  font-size: 20px;
+}
+.Line3{
+  height: 31px;
+  width: 1px;
+  background-color: white;
+  margin-left: 503px;
+  margin-top: -40px;
+}
+.SizeNavigation{
+  color: white;
+  margin-left: 524px;
+  margin-top: -25px;
+  font-size: 19px;
+}
+.Line4{
+  height: 31px;
+  width: 1px;
+  background-color: white;
+  margin-left: 590px;
+  margin-top: -28px;
+}
+.ItemNavigation{
+  color: white;
+  margin-left: 610px;
+  margin-top: -25px;
+  font-size: 19px;
+}
+.Line5{
+  height: 31px;
+  width: 1px;
+  background-color: white;
+  margin-left: 718px;
+  margin-top: -28px;
+}
+.DateModified{
+  color: white;
+  margin-left: 733px;
+  margin-top: -25px;
+  font-size: 19px;
+}
+.ThisPC{
+  margin-top: 232px;
+  margin-left: 10px;
+}
+.iconname{
+  color: white;
+  margin-top: -33px;
+  margin-left: 53px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.download{
+  margin-top: 27px;
+  margin-left: 14px;
+}
+.downloadiconname{
+  color: white;
+  margin-top: -29px;
+  margin-left: 47px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.iconname1{
+  margin-top: 26px;
+  margin-left: 12px;
+}
+.Document{
+  color: white;
+  margin-top: -29px;
+  margin-left: 47px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.iconname2{
+  margin-top: 26px;
+  margin-left: 12px;
+}
+.picture{
+  color: white;
+  margin-top: -32px;
+  margin-left: 47px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.iconname3{
+  margin-top: 26px;
+  margin-left: 12px;
+}
+.Music{
+  color: white;
+  margin-top: -32px;
+  margin-left: 47px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+}
+.iconname4{
+  margin-top: 26px;
+  margin-left: 10px
+}
+.MediaPlayer{
+  color: white;
+  margin-top: -32px;
+  margin-left: 47px;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+}
+.Homeiconstext{
+  position: fixed;
 }
