--- a/components/common/Folder/Folder.module.css
+++ b/components/common/Folder/Folder.module.css
@@ -1,8 +1,20 @@
-.folderBackground {
+.folderDirectory {
+  width: 100%;
   height: 100vh;
+  /* border: 1px solid white; */
+  /* background-color: black; */
+  display: flex;
+  flex-direction: column;
+  /* gap: 10px; */
+}
+
+.folderBackground {
+  height: 140px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.201);
   /* background: transparent; */
+  display: flex;
+  flex-direction: column;
 }
 .navBar {
   width: 100%;
@@ -17,7 +29,6 @@
 .folderNameContainer {
   height: 60px;
   width: 300px;
- 
 
   background-color: rgba(146, 146, 146, 0.738);
   display: flex;
@@ -96,261 +107,217 @@
   padding-right: 10px;
   padding-left: 10px;
 }
-.body {
+
+.Content {
   background-color: black;
-  height: 754px;
+  height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
+}
+.body {
+  /* border: 1px solid white; */
+  width: 100%;
+  height: 750px;
+  display: flex;
   flex-direction: row;
+  color: white;
 }
 .inFolderNavigations {
+  background-color: #29253552;
   width: 300px;
+  height: 755px;
   border-right: 1px solid white;
-}
-.infolderNameContainer {
-  height: 50px;
-  width: 299px;
-
-  background-color: rgba(146, 146, 146, 0.738);
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-top: 120px;
-}
-.mainBody {
-  display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 10px;
   padding-top: 10px;
+}
+
+.iconsAndNameContainer {
   padding-left: 10px;
-  margin-top: 113px
-}
-.folderIconsContainer {
-  height: 80px;
-  width: 80px;
+  padding-top: 10px;
   display: flex;
+  flex-direction: row;
+  gap: 20px;
+  height: 40px;
+  width: 300px;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 5px;
+  cursor: pointer;
 }
 
-
-
-.NewFolderNavigation{
-  border-radius: 1px;
+.NewFolderNavigation {
+  border-width: 1px;
   border-color: white;
   border-style: solid;
   height: 50px;
-  margin-top: 119px;
-  width: 1520px;
+
+  width: 100%;
   display: flex;
-  flex-wrap: nowrap;
+
   align-items: center;
   flex-direction: row;
-  gap: 15px;
-  position: fixed;
-
+  gap: 40px;
 }
-.NewHomeNavigation{
+.NewHomeNavigation {
   position: fixed;
 }
-.newicon{
+.newicon {
   margin-left: 12px;
   height: 30px;
   width: 30px;
 }
-.Newicon{
+.Newicon {
   color: white;
 }
-.ViewArrow{
+.ViewArrow {
   margin-left: -12px;
-    width: 16px;
-    margin-top: 6px;
+  width: 16px;
+  margin-top: 6px;
 }
-.Line{
+.Line {
   height: 28px;
   width: 1px;
   background-color: white;
 }
 
-
-.Cuticon{
+.Cuticon {
   height: 22px;
   width: 22px;
   margin-top: 6px;
-
 }
 
-.Copyicon{
-  height: 20px;
-  width: 19px;
-  margin-top: 1px;
-
-}
-.Pasteicon{
+.Copyicon {
   height: 20px;
   width: 19px;
   margin-top: 1px;
 }
-.Deleteicon{
+.Pasteicon {
   height: 20px;
   width: 19px;
   margin-top: 1px;
 }
-.Line1{
-  height: 29px;
-  width: 1px;
-  background-color: white;
+.Deleteicon {
+  height: 20px;
+  width: 19px;
+  margin-top: 1px;
 }
 
-.homeicon{
-  margin-top: 179px;
-  margin-left: 20px;
-}
-.Hometext{
+.iconname {
   color: white;
+
   font-size: 18px;
-  margin-left: 60px;
-  margin-top: -23px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.HomeBottomLine{
-  border-radius: 1px;
-  border-style: solid;
-  border-color: white;
-  width: 125px;
-  margin-left: 6px;
-  margin-top: 7px;
-  border-width: 1px;
-}
-.Namenavigation{
-  margin-left: 146px;
-  border-color: white;
-  border-style: solid;
-  height: 50px;
-  margin-top: -371px;
-  width: 1383px;
-  border-width: 1px
-}
-.Line2{
-  height: 358px;
-  width: 1px;
-  background-color: white;
-  margin-left: 146px;
-  margin-top: -38px;
-}
-.NameNavigationname{
-  color: white;
-  padding: 19px;
-  font-size: 20px;
-}
-.Line3{
-  height: 31px;
-  width: 1px;
-  background-color: white;
-  margin-left: 503px;
-  margin-top: -40px;
-}
-.SizeNavigation{
-  color: white;
-  margin-left: 524px;
-  margin-top: -25px;
-  font-size: 19px;
-}
-.Line4{
-  height: 31px;
-  width: 1px;
-  background-color: white;
-  margin-left: 590px;
-  margin-top: -28px;
-}
-.ItemNavigation{
-  color: white;
-  margin-left: 610px;
-  margin-top: -25px;
-  font-size: 19px;
-}
-.Line5{
-  height: 31px;
-  width: 1px;
-  background-color: white;
-  margin-left: 718px;
-  margin-top: -28px;
-}
-.DateModified{
-  color: white;
-  margin-left: 733px;
-  margin-top: -25px;
-  font-size: 19px;
-}
-.ThisPC{
-  margin-top: 232px;
-  margin-left: 10px;
-}
-.iconname{
-  color: white;
-  margin-top: -33px;
-  margin-left: 53px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.download{
+.download {
   margin-top: 27px;
   margin-left: 14px;
 }
-.downloadiconname{
-  color: white;
-  margin-top: -29px;
-  margin-left: 47px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.mainBody {
+  width: 100%;
+  height: 755px;
+  /* border: 1px solid white; */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.iconname1{
-  margin-top: 26px;
-  margin-left: 12px;
+.classifier {
+  width: 100%;
+  height: 50px;
+
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
-.Document{
-  color: white;
-  margin-top: -29px;
-  margin-left: 47px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.classifierName {
+  height: 100%;
+  width: 400px;
+  border-right: 1px solid white;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
+  padding-left: 10px;
 }
-.iconname2{
-  margin-top: 26px;
-  margin-left: 12px;
+.classifierSize {
+  height: 100%;
+  width: 100px;
+  border-right: 1px solid white;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
+  padding-left: 10px;
 }
-.picture{
-  color: white;
-  margin-top: -32px;
-  margin-left: 47px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.classifierItemType {
+  height: 100%;
+  width: 300px;
+  border-right: 1px solid white;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
+  padding-left: 10px;
 }
-.iconname3{
-  margin-top: 26px;
-  margin-left: 12px;
+.classifierDateModified {
+  height: 100%;
+  width: 200px;
+  border-right: 1px solid white;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
+  padding-left: 10px;
 }
-.Music{
-  color: white;
-  margin-top: -32px;
-  margin-left: 47px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+.mainContents {
+  width: 100%;
+  height: 900px;
+  /* border-top: 1px solid white; */
+  /* border-right: 1px solid white; */
+  display: flex;
+  flex-direction: column;
 }
-.iconname4{
-  margin-top: 26px;
-  margin-left: 10px
+.contentName {
+  height: 100%;
+  width: 400px;
+  /* border-right: 1px solid white; */
+  justify-content: flex-start;
+  /* align-items: center; */
+  display: flex;
+  flex-direction: row;
+  padding-left: 10px;
+  padding-top: 10px;
+  gap: 10px;
+  align-items: center;
 }
-.MediaPlayer{
-  color: white;
-  margin-top: -32px;
-  margin-left: 47px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+.contentSize {
+  height: 100%;
+  width: 100px;
+  /* border-right: 1px solid white; */
+  justify-content: flex-start;
+  /* align-items: center; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-top: 10px;
 }
-.Homeiconstext{
-  position: fixed;
+.contentItemType {
+  height: 100%;
+  width: 300px;
+  /* border-right: 1px solid white; */
+  justify-content: flex-start;
+  /* align-items: center; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+.contentDateModified {
+  height: 100%;
+  width: 200px;
+  /* border-right: 1px solid white; */
+  justify-content: flex-start;
+  /* align-items: center; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-top: 10px;
 }
