--- a/components/common/Folder/Folder.module.css
+++ b/components/common/Folder/Folder.module.css
@@ -154,7 +154,7 @@
 
   width: 100%;
   display: flex;
-
+  position: relative;
   align-items: center;
   flex-direction: row;
   gap: 40px;
@@ -174,6 +174,19 @@
   margin-left: -12px;
   width: 16px;
   margin-top: 6px;
+}
+.createDirectoryDropdown {
+  height: 100px;
+  width: 450px;
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  border: 1px solid white;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  position: absolute;
+  top: calc(100%);
 }
 .Line {
   height: 28px;
