--- a/components/Account/AccountSetting.module.css
+++ b/components/Account/AccountSetting.module.css
@@ -80,3 +80,12 @@
       background-color: rgba(146, 146, 146, 0.738);
   
   }
+  .Back{
+    border-radius: 1px;
+    border-color: white;
+    border-style: solid;
+    color: white;
+    padding-left: 26px;
+    width: 86px;
+    margin-top: 5px;
+}
