--- a/components/AppSetting/AppSetting.module.css
+++ b/components/AppSetting/AppSetting.module.css
@@ -64,3 +64,13 @@
     width: 1000px;
     
 }
+
+.Back{
+    border-radius: 1px;
+    border-color: white;
+    border-style: solid;
+    color: white;
+    padding-left: 26px;
+    width: 86px;
+    margin-top: 5px;
+}
