--- a/components/Personilaztion/Personilaztion.module.css
+++ b/components/Personilaztion/Personilaztion.module.css
@@ -97,3 +97,12 @@
     width: 1166px;
     padding-left: 346px;
 }
+.Back{
+    border-radius: 1px;
+    border-color: white;
+    border-style: solid;
+    color: white;
+    padding-left: 26px;
+    width: 86px;
+    margin-top: 5px;
+}
