--- a/components/PersonalizationFonts/PersonalizationFonts.module.css
+++ b/components/PersonalizationFonts/PersonalizationFonts.module.css
@@ -90,3 +90,13 @@
      background-color: rgba(146, 146, 146, 0.738);
      font-family: 'Courier New', Courier, monospace;
 }
+
+.Back{
+    border-radius: 1px;
+    border-color: white;
+    border-style: solid;
+    color: white;
+    padding-left: 26px;
+    width: 86px;
+    margin-top: 5px;
+}
