--- a/components/Account/AccountSetting.module.css
+++ b/components/Account/AccountSetting.module.css
@@ -1,82 +1,61 @@
-.WholeAccountSetting{
-    height: 100vh; 
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.WholeAccountSetting {
+  background-image: url(../../public/Assets/SettingsMainPage.png);
+  width: 100%;
+  height: 100vh;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+.Backbtn {
+  margin-top: 100px;
+  margin-left: 100px;
+  color: white;
+  font-size: 1em;
+  height: 50px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgb(0, 0, 0); */
+  border: 1px solid white;
+  cursor: pointer;
+}
+.AccountsName {
+  color: white;
+  font-size: 4em;
+  margin-left: 850px;
+}
+.buttonsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* height: 700px; */
+}
+.Profiles {
+  flex: 1;
+  margin: 15px;
+  padding: 40px;
+  width: 1000px;
+  border: 2px solid #ccc;
+  display: flex;
+  justify-content: space-evenly;
+  color: white;
+  font-size: 40px;
+  background-color: rgba(146, 146, 146, 0.738);
 }
 
-.AccountSettingNav{
-    width: 100%;
-    height: 60px;
-    background: transparent;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-    background-color: black;
-    border: 1px solid white;
+.Securitys {
+  flex: 1;
+  margin: 15px;
+  padding: 40px;
+  width: 1000px;
+  border: 2px solid #ccc;
+  display: flex;
+  justify-content: space-evenly;
+  color: white;
+  font-size: 40px;
+  background-color: rgba(146, 146, 146, 0.738);
 }
-.AccountSettingName{
-    color: white;
-}
-.AccountSettingNameContainer{
-    height: 60px;
-    width: 300px;
-    background-color: rgba(146, 146, 146, 0.738);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-.AccountSettingMiddleware{
-    background-image: url(../../public/Assets/SettingsMainPage.png);
-    width: 100%;
-    height: 635px;
-   
-}
-.AccountSettingMiddlewareName{
-    color: white;
-    width: 100%;
-    height: 78px;
-    padding-top: 20px;
-    padding-left: 81px;
-    font-size: 50px;
-    display: flex;
-    justify-content: flex-start;
-}
-.AllAccountSettingMiddleware{
-    display: flex;
-    flex-direction: column;
-    width: 1166px;
-    padding-left: 346px;
-}
-.Profiles{
-    flex: 1;
-     margin: 15px;
-     padding: 40px;
-     width: 1000px;
-     border: 2px solid #ccc;
-     display: flex;
-      justify-content: space-evenly;
-      color: white;
-      font-size: 40px;
-      background-color: rgba(146, 146, 146, 0.738);
-     
-      
-  }
-  
-  .Securitys{
-      flex: 1;
-      margin: 15px;
-      padding: 40px;
-      width: 1000px;
-      border: 2px solid #ccc;
-      display: flex;
-      justify-content: space-evenly;
-      color: white;
-      font-size: 40px;
-      background-color: rgba(146, 146, 146, 0.738);
-  
-  }
