--- a/components/common/TextEditor/TextEditor.module.css
+++ b/components/common/TextEditor/TextEditor.module.css
@@ -1,16 +1,19 @@
-.ImageViewerBackground {
+.TextEditorContainer {
   height: 100vh;
   width: 100%;
-  background-color: rgb(41, 41, 41);
+  display: flex;
+  flex-direction: column;
+  /* background-color: brown; */
 }
 .navBar {
   width: 100%;
   height: 60px;
-  background: transparent;
+  background: black;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
 }
 .folderNameContainer {
   height: 60px;
@@ -38,8 +41,20 @@
   align-items: center;
 }
 .body {
-  background-color: black;
+  background-color: brown;
+  border: 1px solid white;
+  height: 100vh;
   width: 100%;
-  height: 914px;
-  border-bottom: 1px solid white;
+}
+.Save {
+  color: white;
+  height: 50px;
+  width: 80px;
+  border: 1px solid white;
+  margin-top: 100px;
+  margin-left: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
